k8s/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: financials-tracker-2-frontend-service
  namespace: financials-tracker-2
  labels:
    app: financials-tracker-2-frontend
spec:
  type: ClusterIP
  selector:
    app: financials-tracker-2-frontend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
      name: http
