k8s/app_ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: financials-tracker-2-frontend-ingress
  namespace: financials-tracker-2
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`financials-tracker-2.manuelpuchner.duckdns.org`)
      kind: Rule
      services:
        - name: financials-tracker-2-frontend-service
          port: 80
  tls:
    secretName: financials-tracker-2-frontend-tls
